--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "post-author-joins",
+  "name": "Project2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Team Kicking",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/munmuney/Project2.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/munmuney/Project2/issues"
+  },
+  "homepage": "https://github.com/munmuney/Project2#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.16.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "mysql2": "^1.3.6",
-    "sequelize": "^4.3.1"
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.0",
+    "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "sequelize": "^3.30.1"
   }
 }
